@@ -25,6 +25,10 @@
         app:showAsAction="ifRoom|withText"
         android:title="@string/action_stream"/>
     <item
+        android:id="@+id/action_pause_stream"
+        app:showAsAction="ifRoom|withText"
+        android:title="@string/action_pause_stream"/>
+    <item
         android:id="@+id/action_leave"
         app:showAsAction="ifRoom|withText"
         android:title="@string/action_leave"/>
