@@ -22,6 +22,7 @@ Android Client
 - Added Online Users Activity to display users logged on to the server
 - Online users activity now has popup menu contaning all user actions
 - Added a new option to prevent talking users from moving to the top of users list
+- Added the ability to pause and resume media file streams
 - Added the ability to leave channels
 - Added the ability to set status messages
 - Added the ability to control user's transmissions
